--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "crypto.js": "^3.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "nodemon": "^2.0.15"
   },
