--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.8",
+    "react-redux": "7.2.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
